--- a/src/main/resources/dsqdata.properties
+++ b/src/main/resources/dsqdata.properties
@@ -12,7 +12,8 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/js2?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://localhost:3306/js2?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://www.dsqhost.com:3306/js?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=dongsiqi12
 
