--- a/src/main/resources/dsqdata.properties
+++ b/src/main/resources/dsqdata.properties
@@ -10,12 +10,18 @@
 #jdbc.password=123456
 
 #mysql database setting
-jdbc.type=mysql
-jdbc.driver=com.mysql.cj.jdbc.Driver
+#jdbc.type=mysql
+#jdbc.driver=com.mysql.cj.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/js2?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://www.dsqhost.com:3306/js?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=dongsiqi12
+#jdbc.username=root
+#jdbc.password=dongsiqi12
+
+jdbc.type=mysql
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://172.16.36.119:3309/fs?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=bonc
+jdbc.password=12345678
+
 
 #mssql database settings
 #jdbc.type=mssql
